# polyC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
demo/: CMakeLists.txt  demo.mk  polyc_demo.c
include/polyC/: Action.h  Func.h  Implementation.h  Interface.h  InterfaceImplementation.h  Method.h  polyInterface.h
include/polyC/utility/: MacroUtils.h
src/: Interface.c  polyInterface.c
test/: CMakeLists.txt  test.mk
test/dependencies/: fff.h
test/unit/: CMakeLists.txt  testMain.cpp  unit.mk
test/unit/include/: FuncInterfaces.h  MultiImplementationActionTests.h  MultiImplementationFuncTests.h  SingleImplementationActionTests.h  SingleImplementationFuncTests.h  SingleImplementationTests.h
test/unit/include/action/: ActionInterfaces.h  MultiImplementationActionTests.h  SingleImplementationActionTests.h
test/unit/include/composite/: CompositeInterfaces.h  MultiImplementationCompositeTests.h  SingleImplementationCompositeTests.h
test/unit/include/func/: FuncInterfaces.h  MultiImplementationFuncTests.h
test/unit/src/: MultiImplementationActionTests.cpp  MultiImplementationFuncTests.cpp  SingleImplementationActionTests.cpp  SingleImplementationFuncTests.cpp  SingleImplementationTests.cpp
test/unit/src/action/: MultiImplementationActionTests.cpp  SingleImplementationActionTests.cpp
test/unit/src/composite/: MultiImplementationCompositeTests.cpp  SingleImplementationCompositeTests.cpp
test/unit/src/func/: MultiImplementationFuncTests.cpp  SingleImplementationFuncTests.cpp
